# propertySearcher

./: CMakeLists.txt
src/: main.cpp  oneHtmlGetterMain.cpp
src/fetcher/: CurlWrapper.cpp  CurlWrapper.h  CurlWrapperFactory.cpp  CurlWrapperFactory.h  CurlWrapperFactoryIf.h  CurlWrapperIf.h
src/image_processing/: HistogramCalculator.cpp  HistogramCalculator.h  ImageProcessing.cpp  ImageProcessing.h
src/links/: AllPageLinksGeneratorIf.h  Links.h  LinksProviderIf.h  RightmoveAllPageLinksGenerator.cpp  RightmoveAllPageLinksGenerator.h  RightmoveLinksProvider.cpp  RightmoveLinksProvider.h
src/listings/: Controller.cpp  Controller.h  Listing.cpp  Listing.h  ListingsProviderIf.h  RightmoveListingsProvider.cpp  RightmoveListingsProvider.h  RightmoveSimpleListingsProvider.cpp  RightmoveSimpleListingsProvider.h
src/listings/filters/: ImageListingFilter.cpp  ImageListingFilter.h  ListingFilterIf.h
src/parsers/: HtmlParser.cpp  HtmlParser.h  JsonParser.cpp  JsonParser.h
src/string_manip/: StringManip.cpp  StringManip.h
src/tests/: CurlWrapperFactoryMock.h  CurlWrapperMock.h  HistogramCalculatorTests.cpp  HtmlParserTests.cpp  ImageListingFilterTests.cpp  ImageProcessingTests.cpp  JsonParserTests.cpp  RightmoveAllPageLinksGeneratorTests.cpp  RightmoveLinksProviderTests.cpp  RightmoveSimpleListingsProviderTests.cpp  StringManipTests.cpp
src/tests/test_html/: sample.html  sample.json
